Add TransactionsFile class and transaction writing methods

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,20 @@
 CC = g++
-FLAGS = -Wall -std=c++11
+FLAGS = -Wall -g -std=c++11
+objects = main.o user.o transactionfile.o
 
 all: main 
 
 clean:
-	rm main
+	rm main *.o
 
-main: user.cpp main.cpp
-	$(CC) $(FLAGS) user.cpp main.cpp -o main
+main: $(objects)
+	$(CC) $(FLAGS) $(objects) -o main
+
+user.o: user.cpp user.h constants.h
+	$(CC) -c $(FLAGS) user.cpp
+
+transactionfile.o: transactionfile.cpp transactionfile.h constants.h
+	$(CC) -c $(FLAGS) transactionfile.cpp
+
+main.o: main.cpp constants.h
+	$(CC) -c $(FLAGS) main.cpp
