Move AccountsFile to class to separate file

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC = g++
 FLAGS = -Wall -g -std=c++11
-objects = main.o user.o transactionfile.o
+objects = main.o user.o transactionfile.o accountsfile.o
 
 all: main 
 
@@ -12,6 +12,9 @@ main: $(objects)
 
 user.o: user.cpp user.h constants.h
 	$(CC) -c $(FLAGS) user.cpp
+
+accountsfile.o: accountsfile.cpp accountsfile.h constants.h
+	$(CC) -c $(FLAGS) accountsfile.cpp
 
 transactionfile.o: transactionfile.cpp transactionfile.h constants.h
 	$(CC) -c $(FLAGS) transactionfile.cpp
