Move utility functions to separate file

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 CC = g++
 FLAGS = -Wall -g -std=c++11
-objects = main.o user.o transactionfile.o accountsfile.o
+objects = main.o user.o transactionfile.o accountsfile.o util.o
+deps = constants.h util.h util.cpp
 
 all: main 
 
@@ -10,14 +11,14 @@ clean:
 main: $(objects)
 	$(CC) $(FLAGS) $(objects) -o main
 
-user.o: user.cpp user.h constants.h
+user.o: user.cpp user.h $(deps)
 	$(CC) -c $(FLAGS) user.cpp
 
-accountsfile.o: accountsfile.cpp accountsfile.h constants.h
+accountsfile.o: accountsfile.cpp accountsfile.h $(deps)
 	$(CC) -c $(FLAGS) accountsfile.cpp
 
-transactionfile.o: transactionfile.cpp transactionfile.h constants.h
+transactionfile.o: transactionfile.cpp transactionfile.h $(deps)
 	$(CC) -c $(FLAGS) transactionfile.cpp
 
-main.o: main.cpp constants.h
+main.o: main.cpp $(deps)
 	$(CC) -c $(FLAGS) main.cpp
