--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,36 @@
 CC = g++
 FLAGS = -Wall -g -std=c++11
+VPATH = out
+
 objects = main.o user.o transactionfile.o accountsfile.o util.o
-deps = constants.h util.h util.cpp
+# $(patsubst pattern, replacement, text)
+OBJS = $(patsubst %.o, out/%.o, $(objects))
+deps = constants.h util/util.h util/util.cpp
+
+# Makefile variables
+# $@: target (ex: main)
+# $^: dependencies (ex: for user.o target - user.cpp, user.h)
+# $<: first dependency (ex: for user.o target - user.cpp)
 
 all: main 
 
 clean:
-	rm main *.o
+	rm main out/*.o
 
 main: $(objects)
-	$(CC) $(FLAGS) $(objects) -o main
+	$(CC) $(FLAGS) $(OBJS) -o $@
 
-user.o: user.cpp user.h $(deps)
-	$(CC) -c $(FLAGS) user.cpp
+util.o: util/util.cpp util/util.h $(deps)
+	$(CC) -c $(FLAGS) $< -o out/$@
 
-accountsfile.o: accountsfile.cpp accountsfile.h $(deps)
-	$(CC) -c $(FLAGS) accountsfile.cpp
+user.o: user/user.cpp user/user.h $(deps)
+	$(CC) -c $(FLAGS) $< -o out/$@
 
-transactionfile.o: transactionfile.cpp transactionfile.h $(deps)
-	$(CC) -c $(FLAGS) transactionfile.cpp
+accountsfile.o: accountsfile/accountsfile.cpp accountsfile/accountsfile.h $(deps)
+	$(CC) -c $(FLAGS) $< -o out/$@
+
+transactionfile.o: transactionfile/transactionfile.cpp transactionfile/transactionfile.h $(deps)
+	$(CC) -c $(FLAGS) $< -o out/$@
 
 main.o: main.cpp $(deps)
-	$(CC) -c $(FLAGS) main.cpp
+	$(CC) -c $(FLAGS) $< -o out/$@
